# fannst-templating-engine

./: .gitignore  CMakeLists.txt  README.MD  footer.html  test.cpp  test.html
src/: errors.src.cpp  errors.src.hpp  lexer.cpp  lexer.hpp  prepare.src.cpp  prepare.src.hpp
